Reintegració del branch de Plone 4.
git-svn-id: https://devel.upcnet.es/svn/genwebupc/trunk/genweb.core@2101 6deaf63b-a510-49cf-aad4-8c651776ecce

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,9 +1,13 @@
 Changelog
 =========
 
-3.5 (2010-11-10)
+4.0 (dev)
+---------
+* Ajustat les dependencies
+* Eliminat el CKEditor
+* Afegit el 
+
+3.3dev (unreleased)
 -------------------
 
 - Initial release
-- Compatible amb Plone 3 si es vol fer servir per Plone 4, cal fer servir la versió 4.
-- Primer esbós del core i del resources paquet base de "genweb" (a.k.a. ZigaZaga "el codi").
