Nova versió del paquet, amb els viewlets updatats. - Deprecat el viewlet de toolbar, updatant el de per defecte de Plone 4. - Afegida l'acció d'usuari 'carpeta arrel'. - Updatat el viewlet d'idiomes, utilitzant la estructura del original. - Inclusió de la vista de utilitats genweb.utils per *. - Desconfiguració dels viewlets per a configuració posterior. - Update dels arxius .po i canvi al domini 'genweb'
git-svn-id: https://devel.upcnet.es/svn/genwebupc/trunk/genweb.core@2107 6deaf63b-a510-49cf-aad4-8c651776ecce

--- a/genweb/core/i18n/genweb-en.po
+++ b/genweb/core/i18n/genweb-en.po
@@ -14,7 +14,11 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: upc.genwebupc\n"
+"Domain: genweb\n"
+
+#. "genweb-accesarrel"
+msgid "genweb-accesarrel"
+msgstr "Root folder"
 
 #: browser/capsaleraSuperior.pt
 msgid "identificat"
