--- a/genweb/core/i18n/genweb-es.po
+++ b/genweb/core/i18n/genweb-es.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Code: es\n"
 "Language-Name: Spanish\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: upc.genwebupc\n"
+"Domain: genweb\n"
 
 #. "genweb_loginlocal"
 msgid "genweb_loginlocal"
