git-svn-id: https://devel.upcnet.es/svn/genwebupc/trunk/genweb.core@2108 6deaf63b-a510-49cf-aad4-8c651776ecce

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,11 +1,21 @@
 Changelog
 =========
 
-4.0 (dev)
----------
-* Ajustat les dependencies
-* Eliminat el CKEditor
-* Afegit el 
+4.0b2 (dev)
+-------------------
+Nova versió del paquet, amb els viewlets updatats.
+- Deprecat el viewlet de toolbar, updatant el de per defecte de Plone 4.
+- Afegida l'acció d'usuari 'carpeta arrel'.
+- Updatat el viewlet d'idiomes, utilitzant la estructura del original.
+- Inclusió de la vista de utilitats genweb.utils per *.
+- Desconfiguració dels viewlets per a configuració posterior.
+- Update dels arxius .po i canvi al domini 'genweb'
+
+4.0b1 (2010-11-10)
+-------------------
+- Ajustat les dependencies
+- Eliminat el CKEditor
+- Versió aplicada en Web UPCnet.
 
 3.3dev (unreleased)
 -------------------
