--- a/genweb/core/i18n/upc.genwebupc-plone-es.po
+++ b/genweb/core/i18n/upc.genwebupc-plone-es.po
@@ -185,7 +185,7 @@ msgstr "Para entrar..."
 #. Default: "Put your UPC intranet username with a dot <strong>(name.surname)</strong> and <a href='https://gauss.upc.edu/gauss/canvicontrasenya/index.jsp' target='_blank'>change your password</a> if you haven’t already done so since 01/04/06."
 #: canvi-contrasenya.pt
 msgid "genweb-canvi_de_contrasenya2"
-msgstr "Ponga su nombre de usuario de la intranet UPC con un punto <strong>(nombre.apellido)</strong> y <a href='https://gauss.upc.edu/gauss/canvicontrasenya/index.jsp' target='_blank'>cambie la contraseña</a> si no lo ha hecho desde el 01/04/06."
+msgstr "Ponga su nombre de usuario de la intranet UPC con un punto <strong>(nombre.apellido)</strong>"
 
 #. Default: "If you have forgotten your password..."
 #: canvi-contrasenya.pt
