--- a/genweb/core/locales/ca/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/upc.genwebupc.po
@@ -1,11 +1,11 @@
-# Gettext Message File for the Genweb project.
+# Gettext Message File for GenWeb.
 # Victor Fernandez de Alba (UPCnet)
 msgid ""
-msgstr "" 
+msgstr ""
 "Project-Id-Version: GenWebUPC\n"
 "POT-Creation-Date: 2008-11-20 09:40\n"
-"PO-Revision-Date: 2008-11-20 10:00\n"
-"Last-Translator: Víctor Fernández de Alba <victor.fernandez@upcnet.es>\n"
+"PO-Revision-Date: 2010-06-04 11:20+0100\n"
+"Last-Translator: Roberto Diaz <roberto.diaz@upcnet.es>\n"
 "Language-Team: Plone Team@UPCnet <plone.team@upcnet.es>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Code: ca\n"
 "Language-Name: Catalan\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: genweb\n"
+"Domain: upc.genwebupc\n"
 
 #. "genweb_loginlocal"
 msgid "genweb_loginlocal"
@@ -117,7 +117,6 @@ msgstr "Desconnecta"
 msgid "master_curso"
 msgstr "Curs"
 
-
 #: ."genweb-description_sign_in"
 msgid "genweb-description_sign_in"
 msgstr "Per accedir a aquesta part del web, cal que us identifiqueu amb el vostre nom d'usuari i la contrasenya."
@@ -137,6 +136,12 @@ msgstr "Universitat Politècnica de Catalunya"
 #. "genweb-sobre_aquest_web"
 msgid "genweb-sobre_aquest_web"
 msgstr "Sobre aquest web"
+
+msgid "genweb-rss"
+msgstr "RSS"
+
+msgid "genweb-accessibility"
+msgstr "Accessibilitat"
 
 #. "genweb-heading_sign_in"
 msgid "genweb-heading_sign_in"
@@ -284,7 +289,7 @@ msgid "cerca"
 msgstr "Cerca..."
 
 msgid "cerca_google"
-msgstr "Cerca Google..."
+msgstr "Cerca..."
 
 msgid "cerca_intranet"
 msgstr "Cerca a la Intranet"
@@ -294,3 +299,36 @@ msgstr "Etiqueta Secció"
 
 msgid "descripcio_text_seccio"
 msgstr "És com es veurà la secció"
+
+msgid "Top_of_page"
+msgstr "Amunt"
+
+msgid "Planol_UPC"
+msgstr "Plànol d'accés a la UPC"
+
+msgid "sendto_accio"
+msgstr "Envia"
+
+msgid "print_accio"
+msgstr "Imprimeix"
+
+msgid "permalink_accio"
+msgstr "Enllaç permanent"
+
+msgid "rss_accio"
+msgstr "Rss"
+
+msgid "submitGo"
+msgstr "Cerca"
+
+msgid "obrir_link_finestra_nova"
+msgstr "(obriu en una finestra nova)"
+
+#. Default: "Event body text"
+#: ATContentTypes/content/event.py:101
+msgid "label_event_announcement"
+msgstr "Text de l'esdeveniment"
+
+#: ."genweb-actualitatPDIPAS"
+msgid "genweb-actualitatPDIPAS"
+msgstr "Actualitat PDI/PAS"
