--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+4.1.1 (2011-11-30)
+------------------
+- Actualitzar nasty tags al setuphandlers
+
 4.1 (2011-11-25)
 ----------------
 - Actualització a Plone 4.
