--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.1.2 (unreleased)
+------------------
+
 4.1.1 (2011-11-30)
 ------------------
 - Actualitzar nasty tags al setuphandlers
