--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,9 @@
 Changelog
 =========
 
-4.1.2 (unreleased)
+4.1.2 (2011-12-12)
 ------------------
+- Traduccions
 
 4.1.1 (2011-11-30)
 ------------------
