--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+4.1.3 (2011-12-19)
+------------------
+- Stripped tags al setuphandlers
+
 4.1.2 (2011-12-12)
 ------------------
 - Traduccions
