--- a/genweb/core/locales/en/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/en/LC_MESSAGES/upc.genwebupc.po
@@ -148,3 +148,6 @@ msgstr "Print"
 #: ./browser/addthis.pt
 msgid "comparteix_twitter"
 msgstr "Share on Twitter"
+
+msgid "genweb_info_gral"
+msdid "General Information"
