--- a/genweb/core/locales/es/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/es/LC_MESSAGES/upc.genwebupc.po
@@ -332,3 +332,6 @@ msgstr "Imprimir"
 #: ./browser/addthis.pt
 msgid "comparteix_twitter"
 msgstr "Compartir en Twitter"
+
+msgid "genweb_info_gral"
+msdid "Información General"
