--- a/genweb/core/locales/ca/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/upc.genwebupc.po
@@ -343,4 +343,4 @@ msgid "comparteix_twitter"
 msgstr "Comparteix a Twitter"
 
 msgid "genweb_info_gral"
-msdid "Informació General"
+msgstr "Informació General"
