--- a/genweb/core/locales/es/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/es/LC_MESSAGES/upc.genwebupc.po
@@ -334,4 +334,4 @@ msgid "comparteix_twitter"
 msgstr "Compartir en Twitter"
 
 msgid "genweb_info_gral"
-msdid "Información General"
+msgstr "Información General"
