New 'genweb' i18n domain, updated upc.genwebupc i18n pos from master, compiled mos

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Code: ca\n"
 "Language-Name: Catalan\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: upc.genwebupc\n"
+"Domain: genweb\n"
 
 #. "genweb_loginlocal"
 msgid "genweb_loginlocal"
