--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -4,37 +4,37 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GenWebUPC\n"
 "POT-Creation-Date: 2008-11-20 09:40\n"
-"PO-Revision-Date: 2010-06-04 11:20+0100\n"
+"PO-Revision-Date: 2010-06-04 11:35+0100\n"
 "Last-Translator: Roberto Diaz <roberto.diaz@upcnet.es>\n"
 "Language-Team: Plone Team@UPCnet <plone.team@upcnet.es>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: ca\n"
-"Language-Name: Catalan\n"
+"Language-Code: es\n"
+"Language-Name: Spanish\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: upc.genwebupc\n"
+"Domain: genweb\n"
 
 #. "genweb_loginlocal"
 msgid "genweb_loginlocal"
-msgstr "Identifica't només en aquest web"
+msgstr "Identifícate sólo en esta web"
 
 #. "genweb-single-sign-on"
 msgid "genweb-single-sign-on"
-msgstr "Entra amb la ${genweb-log-in-title}"
+msgstr "Entra con la ${genweb-log-in-title}"
 
 #. "genweb-log-in"
 msgid "genweb-log-in"
-msgstr "identificació única UPC."
+msgstr "identificación única UPC."
 
 # Adreça
 msgid "genweb_adreca"
-msgstr "Adreça"
+msgstr "Dirección"
 
 # Telefon
 msgid "genweb_telefon"
-msgstr "Telèfon"
+msgstr "Teléfono"
 
 # Fax
 msgid "genweb_fax"
@@ -42,11 +42,11 @@ msgstr "Fax"
 
 # A/e
 msgid "genweb_ae"
-msgstr "A/e"
+msgstr "E-mail"
 
 # Direccio
 msgid "genweb_direccio"
-msgstr "Direcció"
+msgstr "Director"
 
 # Personal
 msgid "genweb_personal"
@@ -54,111 +54,81 @@ msgstr "Personal"
 
 # Formulari de contacte
 msgid "genweb_formContacte"
-msgstr "Formulari de contacte"
+msgstr "Formulario de contacto"
 
 # Contacte
 msgid "genweb_contacte"
-msgstr "Contacte"
+msgstr "Contacto"
 
 #. "usuari_connectat"
 msgid "genweb-usuari_connectat"
-msgstr "Usuari connectat:"
+msgstr "Usuario conectado:"
 
 #. "genweb-logout"
 msgid "genweb-logout"
-msgstr "Desconnecta"
-
-#. "genweb-opcionspathbar"
-msgid "genweb-opcionspathbar"
-msgstr "Opcions:"
-
-#. "genweb-accesarrel"
-msgid "genweb-accesarrel"
-msgstr "Carpeta arrel"
-
-#. "genweb-preferencies"
-msgid "genweb-preferencies"
-msgstr "Preferències"
+msgstr "Desconecta"
 
 #. "genweb-ajuda"
 msgid "genweb-ajuda"
-msgstr "Ajuda"
+msgstr "Ayuda"
+
+#. "genweb-opcionspathbar"
+msgid "genweb-opcionspathbar"
+msgstr "Opciones:"
+
+#. "genweb-accesarrel"
+msgid "genweb-accesarrel"
+msgstr "Carpeta raiz"
+
+#. "genweb-preferencies"
+msgid "genweb-preferencies"
+msgstr "Preferencias"
 
 #: browser/capsaleraSuperior.pt
 msgid "identificat"
-msgstr "Identifica't"
+msgstr "Identifícate"
 
 #: browser/capsaleraSuperior.pt
 msgid "cercaavancada"
-msgstr "Cerca avançada"
+msgstr "Búsqueda avanzada"
 
 #: browser/calendar.pt
 msgid "calendari_title"
-msgstr "Calendari"
+msgstr "Calendario"
 
 #: browser/calendar.pt
 msgid "esdeveniments_reunions"
-msgstr "Esdeveniments i reunions."
+msgstr "Eventos y reuniones."
 
 #: browser/calendar.pt
 msgid "avui"
-msgstr "Avui"
+msgstr "Hoy"
 
 #: browser/calendar.pt
 msgid "inici"
-msgstr "Inici"
+msgstr "Inicio"
 
 msgid "nom_usuari"
-msgstr "Usuari"
+msgstr "Usuario"
 
 msgid "master_curso"
-msgstr "Curs"
+msgstr "Curso"
 
 #: ."genweb-description_sign_in"
 msgid "genweb-description_sign_in"
-msgstr "Per accedir a aquesta part del web, cal que us identifiqueu amb el vostre nom d'usuari i la contrasenya."
+msgstr "Para acceder a esta parte del web, tiene que identificarse usando su nombre y contraseña."
 
 #: ."genweb-remember_to_log_out"
 msgid "genweb-remember_to_log_out"
-msgstr "No oblideu desconnectar-vos o tancar el navegador un cop hàgiu finalitzat."
+msgstr "No olvide cerrar su sesión o salir del navegador cuando haya terminado."
 
 #: ."genweb-no_puc_entrar"
 msgid "genweb-no_puc_entrar"
-msgstr "No puc entrar"
+msgstr "No puedo entrar"
 
 #: ."genweb-universitat_politecnica_de_catalunya"
 msgid "genweb-universitat_politecnica_de_catalunya"
-msgstr "Universitat Politècnica de Catalunya"
-
-#. "genweb-sobre_aquest_web"
-msgid "genweb-sobre_aquest_web"
-msgstr "Sobre aquest web"
-
-msgid "genweb-rss"
-msgstr "RSS"
-
-msgid "genweb-accessibility"
-msgstr "Accessibilitat"
-
-#. "genweb-heading_sign_in"
-msgid "genweb-heading_sign_in"
-msgstr "Si us plau, identifiqueu-vos amb el <strong>nom d'usuari de la intranet UPC</strong>"
-
-#. "genweb-si_heu_oblidat_la_contrasenya"
-msgid "genweb-si_heu_oblidat_la_contrasenya"
-msgstr "Si heu oblidat la contrasenya, cliqueu ${click_here}"
-
-#. "genweb-aqui"
-msgid "genweb-aqui"
-msgstr "aquí"
-
-#. "genweb-per_recuperarla"
-msgid "genweb-per_recuperarla"
-msgstr " per recuperar-la."
-
-#. "canvi_de_contrasenya"
-msgid "canvi_de_contrasenya"
-msgstr "Canvi de contrasenya"
+msgstr "Universidad Politécnica de Cataluña"
 
 #. "genweb-ampliar_agenda"
 msgid "genweb-ampliar_agenda"
@@ -166,173 +136,194 @@ msgstr "ampliar agenda"
 
 #. "genweb-mes_noticies"
 msgid "genweb-mes_noticies"
-msgstr "més notícies"
+msgstr "más noticias"
+
+#. "genweb-sobre_aquest_web"
+msgid "genweb-sobre_aquest_web"
+msgstr "Sobre esta web"
+
+msgid "genweb-rss"
+msgstr "RSS"
+
+msgid "genweb-accessibility"
+msgstr "Accesibilidad"
+
+#. "genweb-heading_sign_in"
+msgid "genweb-heading_sign_in"
+msgstr "Por favor, identifíquese con el <strong>nombre de usuario de la intranet UPC</strong>"
+
+#. "genweb-si_heu_oblidat_la_contrasenya"
+msgid "genweb-si_heu_oblidat_la_contrasenya"
+msgstr "Si ha olvidado la contraseña, clique ${click_here}"
+
+#. "genweb-aqui"
+msgid "genweb-aqui"
+msgstr "aquí"
+
+#. "genweb-per_recuperarla"
+msgid "genweb-per_recuperarla"
+msgstr " para recuperarla."
+
+#. "canvi_de_contrasenya"
+msgid "canvi_de_contrasenya"
+msgstr "Cambio de contraseña"
 
 #. "llistat_continguts"
 #: ./skins/plone_templates/global_pathbar.pt:11
 msgid "llistat_continguts"
-msgstr "Vista per defecte"
+msgstr "Vista por defecto"
 
 #. "usuari_connectat"
 msgid "usuari_connectat"
-msgstr "Usuari connectat:"
+msgstr "Usuario conectado:"
 
 #. "login_form_detalls_del_compte"
 msgid "login_form_detalls_del_compte"
-msgstr "Detalls del compte"
+msgstr "Detalles de la cuenta"
 
 # Modificat (Abril2008)
 #: ."genweb-perpoderentrar"
 msgid "genweb-perpoderentrar"
-msgstr "Per entrar..."
+msgstr "Para entrar..."
 
 #: ."genweb-perpoderentrar"
 msgid "genweb-perpoderentrar11"
-msgstr "Escriu el teu nom d'usuari amb un punt (nom.cognom) i "
+msgstr "Ponga su nombre de usuario con un punto (nombre.apellido) y "
 
 #: ."genweb-perpoderentrar21"
 msgid "genweb-perpoderentrar21"
-msgstr "canvia el teu password"
+msgstr "cambie la contraseña "
 
 #: ."genweb-perpoderentrar2"
 msgid "genweb-perpoderentrar2"
-msgstr " si no ho has fet des del 01/04/06."
+msgstr " si no lo ha hecho desde el 01/04/06."
 
 #: ."genweb-sihasoblidat"
 msgid "genweb-sihasoblidat"
-msgstr "Si has oblidat la contrasenya..."
+msgstr "Si olvidó la contraseña..."
 
 #: ."genweb-sihasoblidat2"
 msgid "genweb-sihasoblidat2"
-msgstr "Entreu a la "
+msgstr "Entre en la "
 
 #: ."genweb-sihasoblidat3"
 msgid "genweb-sihasoblidat3"
-msgstr "gestió de contrasenyes "
+msgstr "gestión de contraseñas "
 
 #: ."genweb-sihasoblidat4"
 msgid "genweb-sihasoblidat4"
-msgstr "per recordar-la o modificar-la."
+msgstr "para recordarla o modificarla."
 
 #: ."genweb-sietsusuarinou"
 msgid "genweb-sietsusuarinou"
-msgstr "Si ets un usuari nou... "
+msgstr "Si es un usuario nuevo... "
 
 #: ."genweb-sietsusuarinou2"
 msgid "genweb-sietsusuarinou2"
-msgstr "i pertanys al PDI/PAS o personal vinculat de la universitat, "
+msgstr "y pertenece a PDI/PAS o personal vinculado a la universidad, "
 
 #: ."genweb-sietsusuarinou3"
 msgid "genweb-sietsusuarinou3"
-msgstr "enregistra't "
+msgstr "regístrese "
 
 #: ."genweb-sietsusuarinou4"
 msgid "genweb-sietsusuarinou4"
-msgstr "a la intranet UPC."
-
-#: ."genweb-canvieucontrasenya"
-msgid "genweb-canvieucontrasenya"
-msgstr "canvieu la contrasenya"
+msgstr "en la intranet UPC."
 
 #: ."genweb-canvipasupc1"
 msgid "genweb-canvipasupc1"
-msgstr "Canvi de contrasenya per al PDI-PAS de la UPC i per a la Fundació UPC"
+msgstr "Cambio de contraseña para el PDI-PAS de la UPC y para la Fundació UPC"
 
 #: ."genweb-canvipasupc2"
 msgid "genweb-canvipasupc2"
-msgstr "Canvi de contrasenya per als estudiants de la UPC"
+msgstr "Cambio de contraseña para los estudiantes de la UPC"
 
 #: ."genweb-canvipasupc3"
 msgid "genweb-canvipasupc3"
-msgstr "Canvi de contrasenya per a altres col·lectius"
+msgstr "Cambio de contraseña para otros colectivos"
 
 #: ."genweb-canvipasupc_titol1"
 msgid "genweb-canvipasupc_titol1"
-msgstr "PDI-PAS UPC i Fundació UPC"
+msgstr "PDI-PAS UPC y Fundación UPC"
 
 #: ."genweb-canvipasupc_titol2"
 msgid "genweb-canvipasupc_titol2"
-msgstr "Estudiants de la UPC"
+msgstr "Estudiantes de la UPC"
 
 #: ."genweb-canvipasupc_titol3"
 msgid "genweb-canvipasupc_titol3"
-msgstr "Altres col·lectius"
+msgstr "Otros colectivos"
 
 #: ."genweb-actualitat"
 msgid "genweb-actualitat"
-msgstr "Actualitat UPC"
+msgstr "Actualidad UPC"
 
 #: ."genweb-noticies"
 msgid "genweb-noticies"
-msgstr "Notícies"
+msgstr "Noticias"
 
 #: ."genweb-agenda"
 msgid "genweb-agenda"
 msgstr "Agenda"
 
 msgid "cerca"
-msgstr "Cerca..."
+msgstr "Busca..."
 
 msgid "cerca_google"
-msgstr "Cerca..."
+msgstr "Busca..."
 
 msgid "cerca_intranet"
-msgstr "Cerca a la Intranet"
+msgstr "Busca en la Intranet"
 
 msgid "label_text_seccio"
-msgstr "Etiqueta Secció"
+msgstr "Etiqueta sección"
 
 msgid "descripcio_text_seccio"
-msgstr "És com es veurà la secció"
+msgstr "Es como se vera la sección"
 
 msgid "Top_of_page"
-msgstr "Amunt"
+msgstr "Arriba"
 
 msgid "Planol_UPC"
-msgstr "Plànol d'accés a la UPC"
+msgstr "Plano de acceso a la UPC"
 
 msgid "sendto_accio"
-msgstr "Envia"
+msgstr "Envía"
 
 msgid "print_accio"
-msgstr "Imprimeix"
+msgstr "Imprimir"
 
 msgid "permalink_accio"
-msgstr "Enllaç permanent"
+msgstr "Enlace permanente"
 
 msgid "rss_accio"
 msgstr "Rss"
 
 msgid "submitGo"
-msgstr "Cerca"
+msgstr "Buscar"
 
 msgid "obrir_link_finestra_nova"
-msgstr "(obriu en una finestra nova)"
-
-#. Default: "Event body text"
-#: ATContentTypes/content/event.py:101
-msgid "label_event_announcement"
-msgstr "Text de l'esdeveniment"
+msgstr "(abre en ventana nueva)"
 
 #: ."genweb-actualitatPDIPAS"
 msgid "genweb-actualitatPDIPAS"
-msgstr "Actualitat PDI/PAS"
+msgstr "Actualidad PDI/PAS"
 
 #: ./browser/addthis.pt
 msgid "Comparteix"
-msgstr "Comparteix"
+msgstr "Compartir"
 
 #: ./browser/addthis.pt
 msgid "comparteix_facebook"
-msgstr "Comparteix a Facebook"
+msgstr "Compartir en Facebook"
 
 #: ./browser/addthis.pt
 msgid "comparteix_linkedin"
-msgstr "Comparteix a Linkedin"
+msgstr "Compartir en Linkedin"
 
 #: ./browser/addthis.pt
 msgid "send_mail"
-msgstr "Envia per correu"
+msgstr "Enviar por correo"
 
 #: ./browser/addthis.pt
 msgid "Print"
@@ -340,7 +331,7 @@ msgstr "Imprimir"
 
 #: ./browser/addthis.pt
 msgid "comparteix_twitter"
-msgstr "Comparteix a Twitter"
+msgstr "Compartir en Twitter"
 
 msgid "genweb_info_gral"
-msgstr "Informació General"
+msgstr "Información General"
