Update to i18n strings and to the language selector.

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -16,6 +16,10 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
 
+#. "genweb_content_actions_vista_de_carpeta"
+msgid "genweb_content_actions_vista_de_carpeta"
+msgstr "Vistes de la carpeta"
+
 #. "genweb-escriptori"
 msgid "genweb-escriptori"
 msgstr "Escriptori"
