--- a/genweb/core/locales/zh/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/zh/LC_MESSAGES/genweb.po
@@ -16,6 +16,10 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
 
+#. "genweb_content_actions_vista_de_carpeta"
+msgid "genweb_content_actions_vista_de_carpeta"
+msgstr "Folder views"
+
 #: browser/capsaleraSuperior.pt
 msgid "identificat"
 msgstr "Log In"
