House cleaning, correct some translations, add packet to install and to the addable content types.

--- a/genweb/core/locales/en/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/en/LC_MESSAGES/upc.genwebupc.po
@@ -119,7 +119,7 @@ msgid "genweb-ajuda"
 msgstr "Help"
 
 msgid "obrir_link_finestra_nova"
-msgstr "Open link in a new window"
+msgstr "(open link in a new window)"
 
 #: ."genweb-actualitatPDIPAS"
 msgid "genweb-actualitatPDIPAS"
