--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -16,6 +16,10 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
 
+#. "Vés al contingut (premeu Retorn)"
+msgid "Vés al contingut (premeu Retorn)"
+msgstr "Vés al contingut (premeu Retorn)"
+
 #. "genweb_content_actions_vista_de_carpeta"
 msgid "genweb_content_actions_vista_de_carpeta"
 msgstr "Vistes de la carpeta"
