New messages, fixed constrained folder

--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -16,6 +16,10 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
 
+#. "manage_homeportlets_link"
+msgid "manage_homeportlets_link"
+msgstr "Administra página principal"
+
 #. "genweb-perfil"
 msgid "genweb-perfil"
 msgstr "Perfil"
