--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -16,6 +16,22 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: genweb\n"
 
+#. "genweb-si_heu_oblidat_la_contrasenya_question"
+msgid "genweb-si_heu_oblidat_la_contrasenya_question"
+msgstr "Have you forgotten your password?"
+
+#. "genweb-heading_sign_in-v4"
+msgid "genweb-heading_sign_in-v4"
+msgstr "Log in using your UPC intranet user."
+
+#. "genweb-single-sign-on-v4"
+msgid "genweb-single-sign-on-v4"
+msgstr "Single sign on log in"
+
+#. "genweb_loginlocal"
+msgid "genweb_loginlocal"
+msgstr "Log in only in this site"
+
 #. "manage_homeportlets_link"
 msgid "manage_homeportlets_link"
 msgstr "Manage home page"
