Added overrides for the Display menu

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -464,10 +464,13 @@ msgstr "Tot el contingut"
 msgid "homepage"
 msgstr "Pàgina d'inici"
 
+msgid "label_choose_template"
+msgstr "Vistes"
+
 msgid "genweb_content_actions_content_as_view"
 msgstr "Contingut com a vista"
 
-msgid "label_choose_template"
+msgid "label_choose_item"
 msgstr "Escull contingut per defecte..."
 
 msgid "label_change_default_item"
