--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -475,3 +475,19 @@ msgstr "Escull contingut per defecte..."
 
 msgid "label_change_default_item"
 msgstr "Canvia contingut per defecte..."
+
+#################
+# Control Panel #
+#################
+
+msgid "General"
+msgstr "General"
+
+msgid "Contact information"
+msgstr "Informació general"
+
+msgid "Specific"
+msgstr "Informació general"
+
+msgid "Master"
+msgstr "Master"
