--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -541,3 +541,11 @@ msgstr "des."
 
 msgid "Window"
 msgstr "Finestra iFrame"
+
+
+########################################
+# Collage additional views for folders #
+########################################
+
+msgid "Inherit"
+msgstr "Hereta"
