--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -298,3 +298,6 @@ msgstr "Una página en el portal, que puede contener texto enriquecido."
 
 msgid "label_related_items"
 msgstr "elementos relacionados"
+
+msgid "The link is used almost verbatim, relative links become absolute and the strings \"${navigation_root_url}\" and \"${portal_url}\" get replaced with the real navigation_root_url or portal_url. If in doubt which one to use, please use navigation_root_url"
+msgstr "lalalala"
