--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -816,17 +816,17 @@ msgstr ""
 #. Default: "Afegiu el id de contacte de la base de dades de màsters."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:125
 msgid "help_contacte_id"
-msgstr ""
+msgstr "Añadir el id de la base de datos del Servicio de Comunicación correspondiente a la unidad."
 
 #. Default: "Es mostra la informació d'UPCmaps al contacte."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:161
 msgid "help_contacte_no_upcmaps"
-msgstr ""
+msgstr "No se muestra la información de UPCmaps en el contacto."
 
 #. Default: "Es mostra l'enllaç al directori UPC a la barra d'eines La informació prové de la base de dades de SCP."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:152
 msgid "help_directori_upc"
-msgstr ""
+msgstr "Se mostrará en la parte superior el enlace al Directorio UPC."
 
 #. Default: "Afegiu el color específic 1. És aquell que..."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:172
@@ -1061,22 +1061,6 @@ msgstr "dic."
 msgid "month_feb_abbr"
 msgstr "feb."
 
-#################
-# Control Panel #
-#################
-
-msgid "General"
-msgstr "General"
-
-msgid "Contact information"
-msgstr "Información contacto"
-
-msgid "Specific"
-msgstr "Específico"
-
-msgid "Master"
-msgstr "Máster"
-
 ##########
 # Fechas #
 ##########
@@ -1223,238 +1207,6 @@ msgstr "Cambiar..."
 
 msgid "navegar"
 msgstr "Navegar..."
-
-#######
-# .js #
-#######
-
-msgid "fitxer_no_seleccionat"
-msgstr "Ningún archivo seleccionado..."
-
-msgid "canvia"
-msgstr "Cambiar..."
-
-msgid "navegar"
-msgstr "Navegar..."
-
-####################
-# Contact settings #
-####################
-
-msgid "help_contacte_id"
-msgstr ""
-
-msgid "General"
-msgstr ""
-
-msgid "Contact information"
-msgstr ""
-
-msgid "Specific"
-msgstr ""
-
-msgid "Master"
-msgstr ""
-
-#. "Títol del web amb HTML tags (negretes) [CA]"
-msgid "html_title_ca"
-msgstr ""
-
-#. "Afegiu el títol del Genweb. Podeu incloure tags HTML"
-msgid "help_html_title_ca"
-msgstr ""
-
-#. "Títol del web amb HTML tags (negretes) [ES]"
-msgid "html_title_es"
-msgstr ""
-
-#. "Afegiu el títol del Genweb. Podeu incloure tags HTML"
-msgid "help_html_title_es"
-msgstr ""
-
-#. "Títol del web amb HTML tags (negretes) [EN]"
-msgid "html_title_en"
-msgstr ""
-
-#. "Afegiu el títol del Genweb. Podeu incloure tags HTML."
-msgid "help_html_title_en"
-msgstr ""
-
-#. "Signatura de la unitat [CA]"
-msgid "signatura_unitat_ca"
-msgstr ""
-
-#. "És el literal que apareix al peu de pàgina o el text alternatiu del logotip (centres docents)."
-msgid "help_signatura_unitat_ca"
-msgstr ""
-
-#. "Signatura de la unitat [ES]"
-msgid "signatura_unitat_es"
-msgstr ""
-
-#. "És el literal que apareix al peu de pàgina o el text alternatiu del logotip (centres docents)."
-msgid "help_signatura_unitat_es"
-msgstr ""
-
-#. "Signatura de la unitat [EN]"
-msgid "signatura_unitat_en"
-msgstr ""
-
-#. "És el literal que apareix al peu de pàgina o el text alternatiu del logotip (centres docents)."
-msgid "help_signatura_unitat_en"
-msgstr ""
-
-#. "Codi altra marca [CA]"
-msgid "codi_altre_marca_ca"
-msgstr ""
-
-#. "Codi HTML amb l'enllaç i imatge de logotips a la dreta de la capçalera."
-msgid "help_codi_altre_marca_ca"
-msgstr ""
-
-#. "Codi altra marca [ES]"
-msgid "codi_altre_marca_es"
-msgstr ""
-
-#. "Codi HTML amb l'enllaç i imatge de logotips a la dreta de la capçalera."
-msgid "help_codi_altre_marca_es"
-msgstr ""
-
-#. "Codi altra marca [EN]"
-msgid "codi_altre_marca_en"
-msgstr ""
-
-#. "Codi HTML amb l'enllaç i imatge de logotips a la dreta de la capçalera."
-msgid "help_codi_altre_marca_en"
-msgstr ""
-
-#. "ID contacte de la unitat"
-msgid "contacte_id"
-msgstr ""
-
-#. "Afegiu el id de contacte de la base de dades de màsters."
-msgid "help_contacte_id"
-msgstr "Añadir el id de la base de datos del Servicio de Comunicación correspondiente a la unidad."
-
-#. "Página de contacte personalitzada"
-msgid "contacte_BBBDD_or_page"
-msgstr ""
-
-#. "Per defecte, la informació de contacte prové de la base de dades de SCP, sota petició."
-msgid "help_contacte_BBBDD_or_page"
-msgstr ""
-
-#. "Adreça de contacte al peu"
-msgid "contacte_al_peu"
-msgstr ""
-
-#. "La informació provinent de la base de dades de SCP es visualitzen al peu de la pàgina."
-msgid "help_contacte_al_peu"
-msgstr "La dirección y teléfono provenientes de la base de datos del Servicio de Comunicación se visualizan al pie de página."
-
-#. "Directori UPC a les eines"
-msgid "directori_upc"
-msgstr ""
-
-#. "Es mostra l'enllaç al directori UPC a la barra d'eines La informació prové de la base de dades de SCP."
-msgid "help_directori_upc"
-msgstr "Se mostrará en la parte superior el enlace al Directorio UPC."
-
-#. "Contacte sense UPCmaps"
-msgid "contacte_no_upcmaps"
-msgstr "Se muestra la información de UPCmaps en el contacto."
-
-#. "Es mostra la informació d'UPCmaps al contacte."
-msgid "help_contacte_no_upcmaps"
-msgstr ""
-
-#. "Color específic 1"
-msgid "especific1"
-msgstr ""
-
-#. "Afegiu el color específic 1. És aquell que..."
-msgid "help_especific1"
-msgstr ""
-
-#. "Color específic 2"
-msgid "especific2"
-msgstr ""
-
-#. "Afegiu el color específic 2. És aquell que..."
-msgid "help_especific2"
-msgstr ""
-
-#. "Treu la imatge de la capçalera"
-msgid "treu_imatge_capsalera"
-msgstr ""
-
-#. "Treiem la imatge de la capçalera per ..."
-msgid "help_treu_imatge_capsalera"
-msgstr ""
-
-#. "Treu el menú horitzontal"
-msgid "treu_menu_horitzontal"
-msgstr ""
-
-#. "Treu el menú horitzontal ..."
-msgid "help_treu_menu_horitzontal"
-msgstr ""
-
-#. "Treu les icones per compartir en xarxes socials"
-msgid "treu_icones_xarxes_socials"
-msgstr ""
-
-#. "Treu les icones per compartir en xarxes socials ..."
-msgid "help_treu_icones_xarxes_socials"
-msgstr ""
-
-#. "Amaga de les eines l'enllaç d'identificació"
-msgid "amaga_identificacio"
-msgstr ""
-
-#. "Amaga de les eines l'enllaç d'identificació ..."
-msgid "help_amaga_identificacio"
-msgstr ""
-
-#. "Habilitar l'enllaç a la traducció automàtica de Google Translate [CA]"
-msgid "idiomes_google_translate_link_ca"
-msgstr ""
-
-#. "Blabla ..."
-msgid "help_idiomes_google_translate_link_ca"
-msgstr ""
-
-#. "Habilitar l'enllaç a la traducció automàtica de Google Translate [ES]"
-msgid "idiomes_google_translate_link_es"
-msgstr ""
-
-#. "Blabla ..."
-msgid "help_idiomes_google_translate_link_es"
-msgstr ""
-
-#. "Habilitar l'enllaç a la traducció automàtica de Google Translate [EN]"
-msgid "idiomes_google_translate_link_en"
-msgstr ""
-
-#. "Blabla ..."
-msgid "help_idiomes_google_translate_link_en"
-msgstr ""
-
-#. "Idiomes publicats al web"
-msgid "idiomes_publicats"
-msgstr ""
-
-#. "Aquests seran els idiomes publicats a la web, els idiomes no especificats no seran públics però seran visibles pels gestors (editors)."
-msgid "help_idiomes_publicats"
-msgstr ""
-
-#. "id_estudi"
-msgid "idestudi_master"
-msgstr ""
-
-#. "Afegiu el id de l'estudi de la base de dades de màsters."
-msgid "help_idestudi_master"
-msgstr ""
 
 msgid "homepage_portlet"
 msgstr "Bienvenido"
